# visual_servo_tracking

./: .gitignore  README.md
matlab/src/: draw_camera_frame.m  t1_virtual_calibration.m
mujoco/: .gitignore  README.md  plan.md  pyproject.toml
mujoco/scripts/: demo.py
mujoco/src/mujoco_servo/: __init__.py  app.py  camera.py  cli.py  config.py  control.py  dashboard.py  dashboard_server.py  geometry.py  gui.py  image_features.py  math_utils.py  perception.py  preview.py  rendering.py  robot.py  runtime.py  scene.py  targets.py  types.py
mujoco/tests/: __init__.py  test_camera.py  test_config_and_scene.py  test_control_and_perception.py  test_perception.py  test_runtime.py  test_scene_and_targets.py
